--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,10 @@
     "purescript-prelude": "~2.5.0",
     "purescript-arraybuffer-types": "0.2.0"
   },
+  "repository": {
+    "url": "git://github.com/athanclark/purescript-base64.git",
+    "type": "git"
+  },
   "devDependencies": {
     "purescript-psci-support": "~2.0.0"
   }
