--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "bower_components",
     "output"
   ],
+  "license": "BSD-3-Clause",
   "dependencies": {
     "purescript-prelude": "~2.5.0",
     "purescript-arraybuffer-types": "0.2.0"
