--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
   "license": "BSD-3-Clause",
   "dependencies": {
     "purescript-prelude": "~2.5.0",
-    "purescript-arraybuffer-types": "0.2.0"
+    "purescript-arraybuffer-types": "0.2.0",
+    "purescript-nullable": "2.0.0"
   },
   "repository": {
     "url": "git://github.com/athanclark/purescript-base64.git",
