--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "type": "git"
   },
   "devDependencies": {
-    "purescript-psci-support": "^4.0.0"
+    "purescript-psci-support": "^4.0.0",
+    "purescript-arraybuffer": "^10.0.2"
   }
 }
