--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
     "purescript-nullable": "^4.1.0"
   },
   "repository": {
-    "url": "git://github.com/athanclark/purescript-base64.git",
+    "url": "https://github.com/athanclark/purescript-base64.git",
     "type": "git"
   },
   "devDependencies": {
